--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </footer>
   </main>
   
-  <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
+  <script type="text/javascript" src="https://unpkg.com/@zxing/library@0.21.3"></script>
   <script type="text/javascript">
     let codeReader;
     let selectedDeviceId;
